updated for SAHI

--- a/SAHI_figures_and_tables.Rmd
+++ b/SAHI_figures_and_tables.Rmd
@@ -108,13 +108,8 @@ reg_pass <- "#BFDFC7"
 # Have to manually split tables that are >30 rows because page break kept dropping a row
 #if(!park %in% c("COLO", "FRSP", "GETT", "PETE", "RICH")){
   
-tab1_kab <- function(park, row_start = 1, row_end = 30, table_name = "table1"){
-  df <- if(!park %in% c("COLO", "FRSP", "GETT", "PETE", "RICH")){
-    reg_cycle_tab
-  } else {
-      data.frame(reg_cycle_tab[row_start:row_end,])}
-  
-  kable(df, col.names = tab1_row2, digits = 2, align = 'c', format = 'html', 
+tab1_kab <- function(park, table_name = "table1"){
+  kable(reg_cycle_tab, col.names = tab1_row2, digits = 2, align = 'c', format = 'html', 
         table.attr = "style='width:95%;height:95%;'", row.names = F) %>% #, caption = cap_t1) %>%
   add_header_above(c(" " = 1, " " = 1,
                      "Seedlings per sq.m" = cycle_latest,
@@ -122,25 +117,26 @@ tab1_kab <- function(park, row_start = 1, row_end = 30, table_name = "table1"){
                      "Stocking Index" = cycle_latest)) %>%
   kable_styling(fixed_thead = FALSE, bootstrap_options = 'condensed',
                 full_width = FALSE, position = 'center', font_size = 9) %>%
-  column_spec(1:ncol(df), border_left = T, border_right = T) %>%
+  column_spec(1:ncol(reg_cycle_tab), border_left = T, border_right = T) %>%
   column_spec(border_cols, extra_css = "border-right: 1.5px solid #000000;") %>%
   column_spec(1, extra_css = "border-left: 1.5px solid #000000;") %>%
   # color code cells based on their value per metric
   purrr::reduce(3:border_cols[1], function(x, y){
-    colm <- df[, y]
+    colm <- reg_cycle_tab[, y]
     column_spec(x, y, background = ifelse(!is.na(colm) & colm >= 0.25, reg_pass, "#FFFFFF"))}, .init = .) %>%
   purrr::reduce((border_cols[1] + 1): border_cols[2], function(x, y){
-    colm <- df[, y]
+    colm <- reg_cycle_tab[, y]
     column_spec(x, y, background = ifelse(!is.na(colm) & colm >= 0.14, reg_pass, "#FFFFFF"))}, .init = .) %>%
   purrr::reduce((border_cols[2] + 1): border_cols[3], function(x, y){
-    colm <- df[, y]
+    colm <- reg_cycle_tab[, y]
     column_spec(x, y, background = ifelse(!is.na(colm) & colm >= 100, reg_pass, "#FFFFFF"))}, .init = .) %>%
-  row_spec(0:nrow(df), extra_css = "border-top: 1px solid #000000;") %>%
-  row_spec(0:nrow(df), extra_css = "border-bottom: 1px solid #000000;") %>%
+  row_spec(0:nrow(reg_cycle_tab), extra_css = "border-top: 1px solid #000000;") %>%
+  row_spec(0:nrow(reg_cycle_tab), extra_css = "border-bottom: 1px solid #000000;") %>%
   #landscape(margin = "1cm") %>% 
   save_kable(file = paste0(table_name, ".html"), self_contained = F) # save as html b/c pagedown was having issues
 }
 
+tab1_kab(park)
 num_plots <- nrow(reg_cycle_tab)
 
 ```
@@ -152,48 +148,32 @@ tab2_cols <- names(inv_cycle_tab)
 tab2_row2 <- gsub("inv_cov_|numspp_", "Cycle ", tab2_cols)
 border2_cols <- c(2 + cycle_latest, 2 + cycle_latest*2, 2 )
 
-tab2_kab <- function(park, row_start = 1, row_end = 30, table_name = "table2"){
-  df <- if(!park %in% c("COLO", "FRSP", "GETT", "PETE", "RICH")){
-    inv_cycle_tab
-  } else {
-      data.frame(inv_cycle_tab[row_start:row_end,])}
-  
-  kable(df, col.names = tab2_row2, digits = 2, align = 'c', format = 'html', 
+tab2_kab <- function(park, table_name = "table2"){
+  kable(inv_cycle_tab, col.names = tab2_row2, digits = 2, align = 'c', format = 'html', 
         table.attr = "style='width:95%;height:95%;'", row.names = F) %>% #, caption = cap_t2, title = NULL) %>%
   add_header_above(c(" " = 1, " " = 1, "Average % Cover" = cycle_latest, 
                      "Number of Species per Plot" = cycle_latest)) %>%
   kable_styling(fixed_thead = FALSE, bootstrap_options = 'condensed',
                 full_width = FALSE, position = 'center', font_size = 9) %>%
   column_spec(c(1, 2), border_left = T, border_right = T) %>%
-  column_spec(1:ncol(df), border_left = T, border_right = T) %>%
+  column_spec(1:ncol(inv_cycle_tab), border_left = T, border_right = T) %>%
   column_spec(1, extra_css =  "border-left: 1.5px solid #000000;") %>%
   column_spec(border2_cols, border_right = T) %>%
   #color code most invaded plots
   purrr::reduce(3:border2_cols[1], function(x, y){
-    colm <- df[, y]
+    colm <- inv_cycle_tab[, y]
     column_spec(x, y, background = ifelse(!is.na(colm) & colm >= 10, "#F2F2A0", "#FFFFFF"))}, .init = .) %>%
   purrr::reduce((border2_cols[1] + 1): border2_cols[2], function(x, y){
-    colm <- df[, y]
+    colm <- inv_cycle_tab[, y]
     column_spec(x, y, background = ifelse(!is.na(colm) & colm > 3, "#F2F2A0", "#FFFFFF"))}, .init = .) %>%
-  row_spec(0:nrow(df), extra_css = "border-top: 1px solid #000000;") %>%
-  row_spec(0:nrow(df), extra_css = "border-bottom: 1px solid #000000;") %>%
+  row_spec(0:nrow(inv_cycle_tab), extra_css = "border-top: 1px solid #000000;") %>%
+  row_spec(0:nrow(inv_cycle_tab), extra_css = "border-bottom: 1px solid #000000;") %>%
   #landscape(margin = "1cm") %>%
   save_kable(file = paste0(table_name, ".html"), self_contained = F)
 }
 
 num_plots <- nrow(inv_cycle_tab)
-
-if(!park %in% c("COLO", "FRSP", "GETT", "PETE", "RICH")){
-  tab2_kab(park)
-} else if(park %in% "FRSP"){
-  tab2_kab("FRSP", 1, 30, "table2a")
-  tab2_kab("FRSP", 31, 60, "table2b")
-  tab2_kab("FRSP", 61, 90, "table2c")
-  tab2_kab("FRSP", 91, num_plots, "table2d")
-} else if(park %in% c("COLO", "GETT", "PETE", "RICH")){
-  tab2_kab(park, 1, 30, "table2a")
-  tab2_kab(park, 31, num_plots, "table2b")
-}
+tab2_kab(park)
 ```
 ```{r include = F, eval = T, results = 'hide'}
 # Table 3 setup
@@ -424,3 +404,9 @@ cat(cap_t4)
 includeHTML("table4.html")
 ```
 <br>
+
+
+```{r error = T, results = 'hide', echo = FALSE, include = FALSE}
+file.remove(c("table1.html", "table2.html", "table3.html", "table4.html"))
+```
+
