--- a/SAHI_figures_and_tables.Rmd
+++ b/SAHI_figures_and_tables.Rmd
@@ -10,7 +10,7 @@ output:
       #after_body: "footer.html"
 ---
 ```{r setup, include = FALSE, results = 'hide'}
-knitr::opts_chunk$set(echo = FALSE, fig.align = 'center')
+knitr::opts_chunk$set(echo = FALSE, fig.align = 'center', message = F, warning = F)
 options(knitr.kable.NA = '-')
 
 library(pagedown)
@@ -40,8 +40,8 @@ from <<- as.numeric(midn_params$from[midn_params$park == park])
 from_4yr <<- as.numeric(midn_params$from_4yr[midn_params$park == park])
 to <<- as.numeric(midn_params$to[midn_params$park == park])
 cycle_latest <<- as.numeric(midn_params$cycle_latest[midn_params$park == park])
-from_prev <<- as.numeric(midn_params$from_prev[midn_params$park == park])
-to_prev <<- as.numeric(midn_params$to_prev[midn_params$park == park])
+# from_prev <<- as.numeric(midn_params$from_prev[midn_params$park == park])
+# to_prev <<- as.numeric(midn_params$to_prev[midn_params$park == park])
 QAQC <<- FALSE
 locType <<- 'VS'
 
@@ -51,7 +51,7 @@ network_long <- midn_names$Network_long[midn_names$ParkCode == park]
 
 ```
 
-```{r results = 'asis', include = F}
+```{r results = 'asis', include = F, message = F, warning = F}
 html_header <- HTML('
 <div class="banner">
   <div class="header">
@@ -61,7 +61,7 @@ html_header <- HTML('
         <br>
         <h5> Forest Monitoring Data Summary </h5></div>
     <div id="col-right-header">
-        <img src="www/ah_small_flat_4c_blackbkgr_k100.svg" alt="arrowhead"></div>
+        <img src="www/ah_small_flat_4c_blackbkgr_k100.svg" alt="arrowhead" height = "75px" width = "58px"></div>
     <div id="col-middle-header">
         <h5> National Park Service </h5>
         <h5> U.S. Department of the Interior </h5>
@@ -238,12 +238,12 @@ includeHTML("html_header.html")
 ```
 
 |       A. 
-```{r out.width = "92%", out.extra = 'style="margin-top:-10px;margin-left:20px"'}
+```{r out.width = "92%", out.height="40%", out.extra = 'style="margin-top:-10px;margin-left:20px;"'}
 include_graphics(paste0(new_path, "figures/Figure_1A_", park, "_regen_by_size_class_by_cycle.svg"))
 ```
 
 |       B. 
-```{r out.width = "92%", out.extra = 'style="margin-top:-10px;margin-left:20px"'}
+```{r out.width = "92%", out.height="40%", out.extra = 'style="margin-top:-10px;margin-left:20px;"'}
 include_graphics(paste0(new_path, "figures/Figure_1B_", park, "_tree_dbh_dist_by_cycle.svg"))
 ```
 
@@ -262,7 +262,7 @@ cat(paste0("<p><b>Figure 1.</b> Stem density distributions by cycle in ", park_l
 includeHTML("html_header.html")
 ```
 <br>
-```{r out.width = "45%", out.extra = 'style="margin-left:130px; margin-top:-20px;"'}
+```{r out.width = "45%", out.height = "40%", out.extra = 'style="margin-left:130px; margin-top:-10px;"'}
 include_graphics(paste0(new_path, "figures/Figure_2_Regen_Debt_table.svg"))
 ```
 
@@ -274,7 +274,7 @@ chronic regeneration failure. Sapling/Seedling Composition is the % of total ste
 ```
 <br>
 
-```{r out.width = "80%", out.extra = 'style="margin-left:100px;"'}
+```{r out.width = "80%", out.height = "40%", out.extra = 'style="margin-left:100px;margin-top:-25px;"'}
 include_graphics(paste0(new_path, "figures/", "Figure_3_", park, "_DBI_by_cycle.svg"))
 ```
 
@@ -293,7 +293,7 @@ cat(paste0("<p><b>Figure 3.</b> Deer browse impacts by cycle in ", park_long, " 
 includeHTML("html_header.html")
 ```
 
-```{r out.width = "98%"}
+```{r out.width = "98%", out.height = "95%"}
 include_graphics(paste0(new_path, "figures/Figure_4_", park, "_smoothed_regen_by_species_cycle.svg"))
 ```
 
@@ -311,7 +311,7 @@ approximated a linear trend between consecutive sample events per panel.</p>", s
 includeHTML("html_header.html")
 ```
 
-```{r out.width = "98%"}
+```{r out.width = "98%", out.height = "95%"}
 include_graphics(paste0(new_path, "figures/Figure_5_", park, "_smoothed_tree_dens_BA_by_species_cycle.svg"))
 ```
 
@@ -329,7 +329,7 @@ approximated a linear trend between consecutive sample events per panel.</p>", s
 includeHTML("html_header.html")
 ```
 
-```{r out.width = "85%"}
+```{r out.width = "98%", out.height = "50%"}
 include_graphics(paste0(new_path, "figures/Figure_6_", park, "_smoothed_invasive_cover_by_guild_cycle.svg"))
 ```
 
